# src/main/java/com/github/scripting/programming/language/interview_sim_backend/entity/Token.java
@@ -1,0 +1,35 @@
+package com.github.scripting.programming.language.interview_sim_backend.entity;
+
+import jakarta.persistence.*;
+import lombok.*;
+
+import java.time.ZonedDateTime;
+
+@Entity
+@Table(schema = "user_data", name = "token_tab")
+@Getter
+@Setter
+@ToString
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class Token {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(nullable = false)
+    private String refreshToken;
+
+    @Column(nullable = false)
+    private ZonedDateTime expiryDate;
+
+    @Builder.Default
+    @Column(nullable = false)
+    private boolean revoked = false;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "user_id", nullable = false)
+    @ToString.Exclude
+    private User user;
+}
