# src/main/resources/static/openapi/front-api.yaml
@@ -45,6 +45,33 @@ paths:
                 $ref: '#/components/schemas/AuthResponse'
         '401':
           $ref: '#/components/responses/Unauthorized'
+  /auth/refresh_token:
+    post:
+      summary: Обновление пары токенов (Access, Refresh)
+      description: |
+        В заголовке Authorization необходимо передать Refresh Token в формате `Bearer <token>`.
+        Старый Refresh Token будет аннулирован, а в ответе придет новая пара токенов.
+      tags:
+        - Auth
+      parameters:
+        - name: Authorization
+          in: header
+          required: true
+          description: "Refresh токен в формате 'Bearer <token>'"
+          schema:
+            type: string
+            example: "Bearer eyJhbGciOiJIUzI1Ni..."
+      security:
+        - bearerAuth: [ ]  # Указываем, что ждем токен в Authorization Header
+      responses:
+        '200':
+          description: Токены успешно обновлены
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthResponse'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
 
   /categories:
     get:
@@ -313,12 +340,14 @@ components:
 
     AuthResponse:
       type: object
+      required:
+        - access_token
+        - refresh_token
       properties:
-        id:
-          type: integer
-          format: int64
-          example: 123
-        token:
+        access_token:
+          type: string
+          example: jwt_token_here
+        refresh_token:
           type: string
           example: jwt_token_here
 
